--- a/app/assets/stylesheets/local_sass_variables.scss
+++ b/app/assets/stylesheets/local_sass_variables.scss
@@ -35,7 +35,9 @@ $headings-font-weight: 600 !default;
 
 /* variable, mix-ins for commonly used code */
 
-$main-menu-height: 3.375em;
+$main-menu-height: 3.5em;
+
+$local-page-lr-padding: 12px;
 
 $button-tb-padding: 0.375em;
 $button-lr-padding: 0.75em;
